--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 *.so
 *.dylib
 
+# editor
+.vscode
+.idea
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -15,7 +19,7 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
